[project]
name = "leading-scraping"
version = "0.1.0"
description = "Projeto para scraping e coleta de produtos em lojas online, organizado em múltiplos pacotes Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "application",
    "domain",
    "infrastructure",
]

[tool.uv.workspace]
members = [
    "packages/domain",
    "packages/application",
    "packages/infrastructure",
]

[tool.uv.sources]
domain = { workspace = true }
application = { workspace = true }
infrastructure = { workspace = true }

[dependency-groups]
dev = [{ include-group = "lint" }]
lint = [
    "pyright>=1.1.403",
    "ruff>=0.12.5",
]

# ============================
# Lint e formatação (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
